--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 # Ignore DotAddict files
 dotaddict-*
 origine.jpg
+
+# Ignore the file _disabled created by Dotclear when the theme/plugin has been unactivated.
+_disabled
